# dpvm

./: CMakeLists.txt  README.md
blake2/: CMakeLists.txt
dpvm/app/ai/: alphabet.dpvmake  alphabet.dpvmh  phrases.dpvmake  phrases.dpvmh  vocabulary.dpvmake  vocabulary.dpvmh
dpvm/app/forex/: forex.dpvmake  forex.dpvmh  forexConstants.dpvmh
dpvm/app/track/: track.dpvmake  track.dpvmh
dpvm/common/: bytecodes.dpvmh  errors.dpvmh  mpopenFlags.dpvmh  sysParams.dpvmh  taskFlags.dpvmh
dpvm/examples/: callVarFunc.dpvm  comma.dpvm  customtype.dpvm  dead_cycle.dpvm  dead_recurse.dpvm  for.dpvm  hello.dpvm  mailbox.dpvm  reverse.dpvm  struct.dpvm  struct2.dpvm  struct3.dpvm
dpvm/examples/math/: average.dpvm  binom1.dpvm  binom1a.dpvm  binom2.dpvm  binom3.dpvm  binom4.dpvm  complex.dpvm  factorial.dpvm  factorial2.dpvm  fibonacci.dpvm  math.dpvmake  square_equ.dpvm
dpvm/examples/wget/: connected.dpvm  read_reply.dpvm  wget.dpvm  wget.dpvmake  written.dpvm
dpvm/lib/config/: config.dpvmake  config.dpvmh
dpvm/lib/input/: input.dpvmake  input.dpvmh
dpvm/lib/math/: div.dpvm  fFastPow.dpvm  fastPow.dpvm  math.dpvmake  mul.dpvm  sincos.dpvm
dpvm/lib/stdlib/: copyints.dpvm  make_time.dpvm  objcopy.dpvm  objcopyto.dpvm  parse_time.dpvm  pathcat.dpvm  print_bytecode.dpvm  print_error.dpvm  printf.dpvm  (+27 more)
dpvm/tests/: genfile.dpvm
linenoise/: CMakeLists.txt
src/: CMakeLists.txt  bytecode.c  bytecode.h  cache.c  cache.h  commands.h  config.c  config.h  error.h  hash.c  hash.h  history.h  init.c  init.h  input.c  input.h  io.c  io.h  launch.c  launch.h  list.h  mailbox.c  mailbox.h  main.c  malloc.c  malloc.h  module.c  module.h  name.c  name.h  object.c  object.h  queue.c  queue.h  rbtree.h  run.c  run.h  store.c  store.h  task.c  (+5 more)
(+977 files in other folders)
